--- a/page-Beer.html
+++ b/page-Beer.html
@@ -105,7 +105,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             <div class="row df-cntr">
 
               <!-- Хлебные крошки -->
-              <div class="col-lg-8 col-xl-9 ">
+              <!--<div class="col-lg-8 col-xl-9 ">-->
                <div class="col-lg-4 col-xl-4 ">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                    </ol>
                 </nav>
                </div>
-              </div>
+              <!--</div>-->
               <!-- //Хлебные крошки -->
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
