--- a/page-Beer.html
+++ b/page-Beer.html
@@ -105,17 +105,15 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             <div class="row df-cntr">
 
               <!-- Хлебные крошки -->
-              <!--<div class="col-lg-8 col-xl-9 ">-->
-               <div class="col-lg-4 col-xl-4 ">
+               <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
-                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                     <li class="breadcrumb-item"><a href="packages.html">Туры</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                      <li class="breadcrumb-item active" aria-current="page">Пиво</li>
                    </ol>
                 </nav>
                </div>
-              <!--</div>-->
               <!-- //Хлебные крошки -->
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
