--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -100,6 +100,17 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
 
+              <!-- Хлебные крошки -->
+               <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+                     <li class="breadcrumb-item active" aria-current="page">Карпаты</li>
+                   </ol>
+                </nav>
+               </div>
+              <!-- //Хлебные крошки -->
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Карпаты</h3>
                 </div>
