--- a/page-zoo.html
+++ b/page-zoo.html
@@ -100,7 +100,17 @@
     <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
-
+            <!-- Хлебные крошки -->
+               <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+                     <li class="breadcrumb-item active" aria-current="page">Экскурсия</li>
+                   </ol>
+                </nav>
+               </div>
+              <!-- //Хлебные крошки -->
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 class="title">Экскурсия</h3>
                 </div>
