--- a/packages.html
+++ b/packages.html
@@ -100,17 +100,32 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
     <!-- Туры -->
 
     <section class="packages py-5">
-        <div class="container py-lg-4 py-sm-3">
-	    <!-- Хлебные крошки -->
-               <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+
+
+	      <!-- Хлебные крошки -->
+              <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                      <li class="breadcrumb-item active" aria-current="page">Туры</a></li>
                   </ol>
                 </nav>
-               </div>
+               </div> 
               <!-- //Хлебные крошки -->
+
+        <div class="container py-lg-4 py-sm-3">
+
+	      <!-- Хлебные крошки -->
+              <!-- <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                     <li class="breadcrumb-item active" aria-current="page">Туры</a></li>
+                  </ol>
+                </nav>
+               </div> -->
+              <!-- //Хлебные крошки -->
+
             <h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
