--- a/packages.html
+++ b/packages.html
@@ -451,6 +451,18 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 <!--  //Стамбул  -->
 
             </div>
+
+         <!-- Pagination -->
+         <nav aria-label="...">
+            <ul class="pagination pagination-lg">
+              <li class="page-item active" aria-current="page">
+                <span class="page-link">1</span>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+            </ul>
+         </nav>
+         <!-- //Pagination -->
+
         </div>
     </section>
     <!-- Туры -->
