--- a/packages.html
+++ b/packages.html
@@ -454,7 +454,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
 
          <!-- Pagination -->
          <nav aria-label="...">
-            <ul class="pagination pagination-lg">
+            <ul class="pagination pagination-sm">
               <li class="page-item active" aria-current="page">
                 <span class="page-link">1</span>
               </li>
