--- a/packages.html
+++ b/packages.html
@@ -453,6 +453,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             </div>
 
          <!-- Pagination -->
+         <div class="col-lg-8 col-xl-9 d-flex justify-content-center">
          <nav aria-label="...">
             <ul class="pagination pagination-sm">
               <li class="page-item active" aria-current="page">
@@ -461,6 +462,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
               <li class="page-item"><a class="page-link" href="#">2</a></li>
             </ul>
          </nav>
+         </div>
          <!-- //Pagination -->
 
         </div>
