--- a/packages.html
+++ b/packages.html
@@ -455,7 +455,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
          <!-- Pagination -->
          <div class="col-lg-8 col-xl-9 d-flex justify-content-center">
          <nav aria-label="...">
-            <ul class="pagination pagination-sm">
+            <ul class="pagination pagination-lg">
               <li class="page-item active" aria-current="page">
                 <span class="page-link">1</span>
               </li>
