--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -124,3 +124,27 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
 
 
 
+
+
+            </div>
+
+         <!-- Pagination -->
+         <div class="col-lg-8 col-xl-9 d-flex justify-content-center">
+         <nav aria-label="...">
+            <ul class="pagination pagination-lg">
+              
+              <li class="page-item"><a class="page-link" href="packages.html">1</a></li>
+              <li class="page-item active" aria-current="page">
+                <span class="page-link">2</span>
+              </li>
+            </ul>
+         </nav>
+         </div>
+         <!-- //Pagination -->
+
+        </div>
+    </section>
+    <!-- Туры -->
+
+
+
