--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -147,4 +147,126 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
     <!-- Туры -->
 
 
+    <!--  Популярные Направления -->
+
+    <section class="destinations py-5" id="destinations">
+        <div class="container py-xl-5 py-lg-3">
+            <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
+            <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
+            <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
+
+                <!--  Лимонарий   -->
+                <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
+                    <h4 class="destination mb-3">Лимонарий</h4>
+                    <div class="image-position position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
+                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="Лимонарий">
+                        </a>
+                        <div class="rating">
+                            <ul>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="destinations-info">
+                        <div class="caption mb-lg-3">
+                            <h4>Лимонарий</h4>
+                            <a href="booking.html">Забронировать</a>
+                        </div>
+                    </div>
+                </div>
+                <!--  //Лимонарий   -->
+
+                <!--  LOL   -->
+                <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
+                    <h4 class="destination mb-3">ЛОЛ</h4>
+                    <div class="image-position position-relative">
+                        <a href="https://novipovorot.pp.ua/page-LOL.html">
+                            <img src="images/lol-max.jpg" class="img-fluid" alt="Tik Tok">
+                        </a>
+                        <div class="rating">
+                            <ul>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="destinations-info">
+                        <div class="caption mb-lg-3">
+                            <h4>ЛОЛ</h4>
+                            <a href="booking.html">Забронировать</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!--  //LOL   -->
+
+                <!--  Пиво   -->
+                <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
+                    <h4 class="destination mb-3">Пиво</h4>
+                    <div class="image-position position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Beer.html">
+                            <img src="images/beer-max.jpg" class="img-fluid" alt="Пиво">
+                        </a>
+                        <div class="rating">
+                            <ul>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="destinations-info">
+                        <div class="caption mb-lg-3">
+                            <h4>Пиво</h4>
+                            <a href="booking.html">Забронировать</a>
+                        </div>
+                    </div>
+                </div>
+                <!--  //Пиво   -->
+
+                <!--  Турция   -->
+                <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
+                    <h4 class="destination mb-3">Турция</h4>
+                    <div class="image-position position-relative">
+		      <a href="https://novipovorot.pp.ua/page-Turkey.html">
+                        <img src="images/Turkey-max.jpg" class="img-fluid" alt="Турция">
+	              </a>
+                        <div class="rating">
+                            <ul>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                                <li><span class="fa fa-star"></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="destinations-info">
+                        <div class="caption mb-lg-3">
+                            <h4>Турция</h4>
+                            <a href="booking.html">Забронировать</a>
+                        </div>
+                    </div>
+                </div>
+                <!--  //Турция   -->
+
+
+            </div>
+        </div>
+    </section>
+
+    <!--  //Популярные Направления -->
+
+    <!-- footer -->
+
 
