--- a/packages.html
+++ b/packages.html
@@ -459,7 +459,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
               <li class="page-item active" aria-current="page">
                 <span class="page-link">1</span>
               </li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="packages-page-two.html">2</a></li>
             </ul>
          </nav>
          </div>
