--- a/packages.html
+++ b/packages.html
@@ -401,7 +401,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 <!--  //Карпаты  -->
 
                 <!--  8 марта  -->
-                <div class="col-lg-3 col-sm-6 mb-5">
+               <!-- <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-eight-march.html">
                             <img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
@@ -421,7 +421,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //8 марта  -->
 
                 <!--  Стамбул -->
