--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -119,9 +119,30 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             <h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
-
-
-
+              
+                <!--  8 марта  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-eight-march.html">
+                            <img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-eight-march.html">
+                                Букет к 8 марта
+                            </a>
+                        </h5>
+                        <p class="">Оригинальный подарок своими руками к 8 марта!</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>6 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //8 марта  -->
 
 
 
