--- a/packages.html
+++ b/packages.html
@@ -259,7 +259,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 <!--  //Турция  -->
 
                 <!--  Одесса -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+              <!--  <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
                             <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
@@ -275,7 +275,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //Одесса  -->
 
                 <!--  Лимонарий   -->
