--- a/packages.html
+++ b/packages.html
@@ -391,7 +391,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                                 Карпаты
                             </a>
                         </h5>
-                        <p class=""> Походы в Карпаты с комфортом...</p>
+                        <p class=""> Расписание походов в Карпаты за 2021 год </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
