--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
     <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://novipovorot.pp.ua/index.html"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/"/>
     <meta property="og:image" content="images/novi-povorot.jpg">
     <!--End Open Graph data-->
 
@@ -888,6 +888,18 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
    });
 </script>
 <!-- /Yandex.Metrika counter -->
+
+<script type="application/ld+json"> 
+{
+  "@context": "https://schema.org/",
+  "@type": "WebSite",
+  "name": "Туры выходного дня - Новый Поворот",
+  "url": "https://novipovorot.pp.ua",
+  "description": "Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации",
+  "image": "images/novi-povorot.jpg"
+}
+</script>
+
 </body>
 
 </html>
