--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
   "name": "Туры выходного дня - Новый Поворот",
   "url": "https://novipovorot.pp.ua",
   "description": "Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации",
-  "image": "images/novi-povorot.jpg"
+  "image": "https://dmitriy-1986.github.io/Travell-tours-site/images/novi-povorot.jpg"
 }
 </script>
 
