--- a/packages.html
+++ b/packages.html
@@ -44,23 +44,23 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
-<!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '3921253151274858');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+	<!-- Facebook Pixel Code -->
+	<script>
+	!function(f,b,e,v,n,t,s)
+	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];
+	s.parentNode.insertBefore(t,s)}(window, document,'script',
+	'https://connect.facebook.net/en_US/fbevents.js');
+	fbq('init', '3921253151274858');
+	fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
 
 </head>
 
@@ -258,26 +258,6 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 </div>
                 <!--  //Турция  -->
 
-                <!--  Одесса -->
-              <!--  <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                            <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>2100грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
-                        <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
-                        <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>5-9 Марта 2021 Года</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
-                        </ul>
-                    </div>
-                </div>-->
-                <!--  //Одесса  -->
-
                 <!--  Лимонарий   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
@@ -400,30 +380,6 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 </div>
                 <!--  //Карпаты  -->
 
-                <!--  8 марта  -->
-               <!-- <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-eight-march.html">
-                            <img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-eight-march.html">
-                                Букет к 8 марта
-                            </a>
-                        </h5>
-                        <p class="">Оригинальный подарок своими руками к 8 марта!</p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>6 Марта 2021 Года</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-                        </ul>
-                    </div>
-                </div>-->
-                <!--  //8 марта  -->
-
                 <!--  Стамбул -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
@@ -453,8 +409,8 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             </div>
 
          <!-- Pagination -->
-         <div class="col-lg-8 col-xl-9 d-flex justify-content-center">
-         <nav aria-label="...">
+         <div class="col-lg-8 col-xl-9 mx-auto">
+         <nav aria-label="..." class="d-flex justify-content-center">
             <ul class="pagination pagination-lg">
               <li class="page-item active" aria-current="page">
                 <span class="page-link">1</span>
@@ -667,23 +623,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                             </ul>
                         </div>
                     </div><!--
-                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
-                        <div class="footer-title">
-                            <h3>Новостная рассылка</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p>
-                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
-                                обновления.
-                            </p>
-                            <form action="#" method="post">
-                                <input type="email" name="Email" placeholder=" Введите адрес электронной почты... "
-                                    required="">
-                                <button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                                <div class="clearfix"> </div>
-                            </form>
-                        </div>
-                    </div>-->
+                    
                     <!-- Begin Mailchimp Signup Form -->
                      <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
                         <div class="footer-title">
