--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -169,10 +169,9 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             </div>
 
          <!-- Pagination -->
-         <div class="col-lg-8 col-xl-9 d-flex justify-content-center">
-         <nav aria-label="...">
-            <ul class="pagination pagination-lg">
-              
+         <div class="col-lg-8 col-xl-9 d-flex mx-auto">
+         <nav aria-label="..." class="d-flex justify-content-center">
+            <ul class="pagination pagination-lg">    
               <li class="page-item"><a class="page-link" href="packages.html">1</a></li>
               <li class="page-item active" aria-current="page">
                 <span class="page-link">2</span>
@@ -383,24 +382,8 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                                 </li>
                             </ul>
                         </div>
-                    </div><!--
-                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
-                        <div class="footer-title">
-                            <h3>Новостная рассылка</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p>
-                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
-                                обновления.
-                            </p>
-                            <form action="#" method="post">
-                                <input type="email" name="Email" placeholder=" Введите адрес электронной почты... "
-                                    required="">
-                                <button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                                <div class="clearfix"> </div>
-                            </form>
-                        </div>
-                    </div>-->
+                    </div>
+                   
                     <!-- Begin Mailchimp Signup Form -->
                      <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
                         <div class="footer-title">
