--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -345,24 +345,8 @@
                                 </li>
                             </ul>
                         </div>
-                    </div><!--
-                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
-                        <div class="footer-title">
-                            <h3>Новостная рассылка</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p>
-                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
-                                обновления.
-                            </p>
-                            <form action="#" method="post">
-                                <input type="email" name="Email" placeholder=" Введите адрес электронной почты... "
-                                    required="">
-                                <button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                                <div class="clearfix"> </div>
-                            </form>
-                        </div>
-                    </div>-->
+                    </div>
+			
                     <!-- Begin Mailchimp Signup Form -->
                      <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
                         <div class="footer-title">
@@ -406,10 +390,9 @@
         </a>
     </div>
     <!-- move top -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-     <!-- Вариант 1: Bootstrap в связке с Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-	
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
