--- a/page-wine.html
+++ b/page-wine.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия на винный завод, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
-    <!--<meta name="keywords" content="Tуры выходного дня 'Новый поворот', Вкусный мастер класс по созданию Сладкого букета, 8_марта_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />-->
+  
     <!-- Open Graph data-->
     <meta property="og:title" content="Вино">
     <meta property="og:description" content="Экскурсия на винный завод"/>
@@ -369,9 +369,9 @@
     </div>
     <!-- move top -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-     <!-- Вариант 1: Bootstrap в связке с Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
