--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,8 @@
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
     <!--//favicon.ico-->
     <!-- css files -->
-    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />--><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
@@ -42,23 +43,23 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
-<!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '3921253151274858');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '3921253151274858');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
 
 </head>
 
@@ -279,24 +280,8 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                                 </li>
                             </ul>
                         </div>
-                    </div><!--
-                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
-                        <div class="footer-title">
-                            <h3>Новостная рассылка</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p>
-                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
-                                обновления.
-                            </p>
-                            <form action="#" method="post">
-                                <input type="email" name="Email" placeholder=" Введите адрес электронной почты... "
-                                    required="">
-                                <button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                                <div class="clearfix"> </div>
-                            </form>
-                        </div>
-                    </div>-->
+                    </div>
+                    
                     <!-- Begin Mailchimp Signup Form -->
                      <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
                         <div class="footer-title">
@@ -340,7 +325,6 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
         </a>
     </div>
     <!-- move top -->
-
 
 </body>
 
