--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -169,7 +169,7 @@
             </div>
 
          <!-- Pagination -->
-         <div class="col-lg-8 col-xl-9 d-flex mx-auto">
+         <div class="col-lg-8 col-xl-9 mx-auto">
          <nav aria-label="..." class="d-flex justify-content-center">
             <ul class="pagination pagination-lg">    
               <li class="page-item"><a class="page-link" href="packages.html">1</a></li>
