--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
 <!-- Facebook Pixel Code -->
-<script>
+<!--<script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
 n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -135,7 +135,7 @@ fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-/></noscript>
+/></noscript>-->
 <!-- End Facebook Pixel Code -->
 
 </head>
