--- a/page-LOL.html
+++ b/page-LOL.html
@@ -47,7 +47,7 @@
     <!-- //google fonts -->
 
 	<!-- Facebook Pixel Code -->
-	<script>
+	<!--<script>
 	!function(f,b,e,v,n,t,s)
 	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
 	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -61,7 +61,7 @@
 	</script>
 	<noscript><img height="1" width="1" style="display:none"
 	src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-	/></noscript>
+	/></noscript>-->
 	<!-- End Facebook Pixel Code -->
 
 </head>
