--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -119,8 +119,8 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021
-                                        Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано
+                                       </span>
                                 </li>
                             </ul>
                         </div>
