--- a/packages.html
+++ b/packages.html
@@ -204,7 +204,7 @@
                            50 оттенков кофе Isla. Экскурсия и дегустация...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>9 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -302,7 +302,7 @@
                          Праздник и мастер класс с Новым поворотом
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
