--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -141,7 +141,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>28 Марта, 16 Апреля 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Апреля 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
