--- a/page-Beer.html
+++ b/page-Beer.html
@@ -318,6 +318,12 @@
                   </div>
                </div>
                <!-- //owl-carousel -->
+               <hr>
+               <span class="badge bg-secondary">Secondary</span>
+               <span class="badge bg-secondary">Secondary</span>
+               <span class="badge bg-secondary">Secondary</span>
+               <span class="badge bg-secondary">Secondary</span>
+               <span class="badge bg-secondary">Secondary</span>
                     </div>
                 </div>
             </div>
