--- a/page-Beer.html
+++ b/page-Beer.html
@@ -319,11 +319,11 @@
                </div>
                <!-- //owl-carousel -->
                <hr>
-               <span class="badge bg-secondary">Secondary</span>
-               <span class="badge bg-secondary">Secondary</span>
-               <span class="badge bg-secondary">Secondary</span>
-               <span class="badge bg-secondary">Secondary</span>
-               <span class="badge bg-secondary">Secondary</span>
+               <span class="badge bg-secondary">Дегустация пива</span>
+               <span class="badge bg-secondary">Пивная экскурсия</span>
+               <span class="badge bg-secondary">Частная пивоварня</span>
+               <span class="badge bg-secondary">Натуральное пиво</span>
+               <span class="badge bg-secondary">Дух хмеля</span>
                     </div>
                 </div>
             </div>
