--- a/page-Beer.html
+++ b/page-Beer.html
@@ -319,11 +319,11 @@
                </div>
                <!-- //owl-carousel -->
                <hr>
-               <span class="badge rounded-pill bg-secondary">Дегустация пива</span>
-               <span class="badge rounded-pill bg-secondary ">Пивная экскурсия</span>
-               <span class="badge rounded-pill bg-secondary">Частная пивоварня</span>
-               <span class="badge rounded-pill bg-secondary">Натуральное пиво</span>
-               <span class="badge rounded-pill bg-secondary">Дух хмеля</span>
+               <span class="badge rounded-pill bg-secondary text-white">Дегустация пива</span>
+               <span class="badge rounded-pill bg-secondary text-white">Пивная экскурсия</span>
+               <span class="badge rounded-pill bg-secondary text-white">Частная пивоварня</span>
+               <span class="badge rounded-pill bg-secondary text-white">Натуральное пиво</span>
+               <span class="badge rounded-pill bg-secondary text-white">Дух хмеля</span>
                     </div>
                 </div>
             </div>
