--- a/page-Beer.html
+++ b/page-Beer.html
@@ -6,7 +6,7 @@
     <title>Пиво | Новый поворот | Экскурсия и дегустация в частную пивоварню </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', дегустация пива, пивная экскурсия, частная пивоварня, натуральное пиво, дух хмеля">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
     <meta property="og:title" content="Пиво">
@@ -319,6 +319,9 @@
                </div>
                <!-- //owl-carousel -->
                <hr>
+               <p>
+                Тексты подсказок:
+               </p>
                <span class="badge rounded-pill bg-secondary text-white">Дегустация пива</span>
                <span class="badge rounded-pill bg-secondary text-white">Пивная экскурсия</span>
                <span class="badge rounded-pill bg-secondary text-white">Частная пивоварня</span>
