--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -201,6 +201,16 @@
                                     class="fa fa-calendar mr-2"></span> 18.09.2021 - 26.09.2021 </li>
                         </ul>
                     </div>
+                      <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white">Расписание походов Грузия</span>
+               <span class="badge rounded-pill bg-secondary text-white">Новый Поворот Грузия</span>
+               <span class="badge rounded-pill bg-secondary text-white">Походы по Грузии </span>
+               <span class="badge rounded-pill bg-secondary text-white">Тушетия и Хевсуретия </span>
+               <span class="badge rounded-pill bg-secondary text-white">Сванетия  и Колхида </span>
+            
 			<!-- liq pay -->
 			<!--<div id="liqpay_checkout"></div>-->
                 </div>
