--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -272,6 +272,18 @@
                                 </li>
                                 <ul>
                         </div>
+
+                      <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white">Остров Запорожья</span>
+               <span class="badge rounded-pill bg-secondary text-white">Тайны Хортицы </span>
+               <span class="badge rounded-pill bg-secondary text-white">Экскурсия по Хортице </span>
+               <span class="badge rounded-pill bg-secondary text-white">Захоронение Колдуна </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Древние святилища </span>
+            
+
 			<!-- liq pay -->	    
 		<!--<div id="liqpay_checkout"></div>-->
                     </div>
