--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -482,6 +482,17 @@
                             </li>
                         </ul>
                     </div>
+                   <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white"> Сокровище Карпат </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Говерла, Петрос и Черногора </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Экскурсия в Карпаты</span>
+               <span class="badge rounded-pill bg-secondary text-white"> Походы в Карпаты </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Буковель и Яремче </span>
+            
+
                 </div>
             </div>
         </div>
