--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -477,6 +477,18 @@
                                 </li>
                                 <ul>
                         </div>
+
+                        <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white"> Прогулка по Золотому Рогу </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Оазис тишины </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Между Европой и Азией </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Центр Стамбула </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Улица антикварных лавок </span>
+            
+
                         <!-- liq pay -->
                         <!--<div id="liqpay_checkout"></div>-->
                     </div>
