--- a/page-wine.html
+++ b/page-wine.html
@@ -237,6 +237,16 @@
                                     class="fa fa-calendar mr-2"></span> 29 Мая 2021 </li>
                         </ul>
                         
+                      <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white"> Натуральное вино </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Экскурсия на винный завод </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Дегустация вина и улиток </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Вина Запорожья </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Винный завод Запорожья</span>
+            
                       <!-- <div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
