--- a/page-zoo.html
+++ b/page-zoo.html
@@ -233,7 +233,7 @@
                                             Мы в Зоопарке Пылышенко, слушаем удивительную
                                           историю создания Зоопарка и знакомимся с животными:
                                           милыми мишками, смешными енотиками, величественными 
-                                          тирами и конечно грациозными 
+                                          тиграми и конечно грациозными 
                                           львами! Делаем самые красивые фото на память. Перекус бутербродиком из дома если проголодались.
                                           Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
                                           <p><strong>03:00-14:00 </strong>Посещаем мистический Замок Попова! 
@@ -284,7 +284,16 @@
                                 </li>
                                 <ul>
                         </div>
-                     
+                     <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white"> Зоопарк Пылышенко </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Мистический Замок</span>
+               <span class="badge rounded-pill bg-secondary text-white"> Замок Попова </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Панское озеро  </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Волшебный родник </span>
+            
                       <!-- <div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
