--- a/page-wine.html
+++ b/page-wine.html
@@ -6,7 +6,7 @@
 <title>Вино | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия на винный завод, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Натуральное вино, Экскурсия на винный завод, Дегустация вина и улиток, Вина Запорожья, Винный завод Запорожья ">
   
     <!-- Open Graph data-->
     <meta property="og:title" content="Вино">
