--- a/page-Karpati.html
+++ b/page-Karpati.html
@@ -6,8 +6,8 @@
     <title>Карпаты | Новый поворот | Походы в Карпаты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы в Карпаты | Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы ">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы в Карпаты, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Сокровище Карпат, Говерла, Петрос и Черногора, Экскурсия в Карпаты, Походы в Карпаты, Буковель и Яремче ">
+    <!--<meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы в Карпаты, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />-->
     <!-- Open Graph data-->
     <meta property="og:title" content="Карпаты">
     <meta property="og:description" content="Походы в Карпаты. Расписание походов..."/>
