--- a/cheese-farm.html
+++ b/cheese-farm.html
@@ -1,1 +1,78 @@
 <!--cheese-farm.html-->
+18 апреля 2021 САМАЯ ВКУСНАЯ ЭКСКУРСИЯ! 
+СЫРНАЯ ФЕРМА И ПАСЕКА!
+ДЕГУСТАЦИЯ 7 ВИДОВ СЫРА, МЕДА, МОЛОКА И ЙОГУРТА! 
+ШОК ЦЕНА РАННЕГО БРОНИРОВАНИЯ! 
+
+БУДЬ ПЕРВЫМ, ВЕДЬ ИМЕННО ТУТ ЕЩЕ НЕ БЫЛИ ТУРИСТЫ! 
+Вытяжные сыры, сыры с плесенью, крапивой и в виде груши. Вы такого еще не 
+видели и не пробовали! Сыры с Запорожской душой и поразительными вкусами от любителя до гурмана! Мы увидим милых козочек, которых уже больше 70ти голов и забавного ослика Кешу помощника в заготовке сена!
+Узнаем секреты изготовления твердых и мягких сыров, а еще попробуем 
+свежее козье молочко и вкуснейший йогурт.
+
+Наступила весна и проснулись трудяжки пчелки, поедем проведать их и 
+угоститься медком. Мы побываем в роли настоящего пасечника примерив на 
+себя защитный костюм, попробуем вкуснейшие соты (забрус) и узнаем истории 
+пасеки и пчелок!
+
+ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ И НЕ ПРОБОВАЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 10 
+человек, 11 едет бесплатно )
+
+Цена билета ДО 8 АПРЕЛЯ* :390 грн от 6 до 200 лет, 375 грн 4-10 лет, до 
+4х бесплатно(без предоставления отдельного места в транспорте)
+С 9 АПРЕЛЯ 420 грн взрослые, 395грн дети 
+Предоплата по брони 50% от стоимости.  +380506702264 Viber/ Telegram
+директ/месенджер
+
+
+Присоединяйтесь к сообществу в Viber: Новый Поворот Запорожье 
+https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l
+%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp
+
+11:00 выезд с центра Запорожья после минутки позитива. 
+Фестивальная- Металлургов - Каховская заберем Вас в этих 3х местах где 
+удобно, о месте посадки пишите при бронировании.
+11:50-12:50 экскурсия по Пасеке. Посещаем улики где живут трудяжки 
+пчелки, в защитных костюмах и под присмотром опытного пасечника!
+Пробуем 2 вида меда: подсолнух и разнотравье, плюс вкуснейший забрус 
+(медовые соты). По желанию берем покупаем медок с собой, 
+Цены супер! Для наших туристов 130 грн/л, 3л -380 грн.
+После вкусной дегустации отправляемся дальше на Сырную ферму.
+13:00- 14:30 (15)- мы в удивительном месте настоящей Сырной ферме. Такие 
+фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в 
+этом месте рождаются шедевры сыроварения! Тут сыры свисают с потолка в 
+виде грушек, на полочках покрываются вкусной корочкой, источают 
+неописуемый аромат, ведь невозможно передать словами этот чудесный вкус 
+натурального сыра. Мы попробуем 7 сыров: Вознесеновский со смесью трав,  
+Качотта, Гауда с крапивой,  Альпийский, Пармарелло, Качокавалло + 
+"ЗАГАДКА" ОДИН ВИД СЫРА ВЫ УЗНАЕТЕ УЖЕ НА ФЕРМЕ!
+Мы увидим миленьких козочек и козляточек, а у Александра их больше 70 
+голов. Познакомимся с осликом Кешей и угостим его вкусным сеном. 
+Попробуем настоящего козьего молочка и вкуснейшего йогурта. 
+Мы посмотрим весь путь который проходит сыр от молочка до ароматного и 
+вкусами любимого блюда, увидим больше 40 видов различных сыров...
+Я могу еще долго писать Вам так нам будет хорошо, но стоит увидеть своими 
+глазами эту красоту. 
+15:50 мы уже в Запорожье, В ПОЛНОМ ВОСТОРГЕ с сыром и медом возвращаемся домой чтоб поделится впечатлениями с друзьями и близкими(но еще лучше их взять с собой)
+*время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.
+В стоимости: 
+проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; 
+(от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь )),
+экскурсия по Сырной ферме,
+дегустация 7 видов сыра, молоко, йогурт;
+экскурсия по Пасеке;
+дегустация 2 вида меда и забрус;
+сопровождение представителя нашей компании,
+магнит от Нового поворота,
+самое замечательное настроение.
+
+Дополнительно оплачивается: 
+индивидуальная покупка меда  130 грн/л, 3л -380 грн
+Индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта. 
+
+
+#Запорожье #НовыйповоротЗапорожье #путешествия #туризм 
+#СырнаяФермаЗапорожье #ПесекаЗапорожье  #Медоваяэкскурсия 
+#экскурсииЗапорожье #кудапоехатьЗапорожье #достопримечательностиЗапорожье #афишаЗапорожья 
+#Zaporizhya #дегустациясыра #дегустациямеда
