--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -241,7 +241,7 @@
                                              Цены супер! Для наших туристов 130 грн/л, 3л -380 грн.
                                              После вкусной дегустации отправляемся дальше на Сырную ферму.
                                         <p/>
-                                          <p><strong>13:00- 14:30 (15) </strong>
+                                          <p><strong>13:00-14:30 (15:00) </strong>
                                                 Мы в удивительном месте настоящей Сырной ферме. Такие 
                                                 фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в 
                                                 этом месте рождаются шедевры сыроварения! Тут сыры свисают с потолка в 
