--- a/packages.html
+++ b/packages.html
@@ -308,7 +308,7 @@
                 <!--  //Лимонарий -->
 
                 <!--  TikTok -->
-                <div class="col-lg-3 col-sm-6 mb-5">
+               <!-- <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
                             <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
@@ -330,7 +330,7 @@
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <!--  //TikTok-->
 
                 <!--  ЛОЛ -->
