--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -121,6 +121,32 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
               
+                <!--  TikTok -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                            <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                                Tik Tok pati
+                            </a>
+                        </h5>
+                        <p class="">
+                         Праздник и мастер класс с Новым поворотом
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //TikTok-->
+
                 <!--  8 марта  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
