--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -146,7 +146,12 @@
                             себя защитный костюм, попробуем вкуснейшие соты (забрус) и узнаем истории 
                             пасеки и пчелок!
                         </p>
-                      
+                        <p class="p-2 bg-warning text-white">
+                         ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ И НЕ ПРОБОВАЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ!
+                         КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+                         Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 10 
+                         человек, 11 едет бесплатно )
+                        </p>
                         <hr>
                        
                         <!-- Alert info -->
